@@ -1,3 +1,8 @@
+2003-06-24  Mikael Hallendal  <micke@imendio.com>
+
+	* src/dh-parser.c: (dh_parse_file): 
+	- Fixed memory leak found when playing with gnome-vfs module.
+
 2003-06-13  Mikael Hallendal <micke@imendio.com>
 
         * *: Updated mine and Richard contact info
